--- a/TT-2016-B045/archivosTex/analisis.tex
+++ b/TT-2016-B045/archivosTex/analisis.tex
@@ -1,5 +1,5 @@
 
-El capítulo de análisis dentro de este documento, contiene todo el proceso que corresponde a la etapa de análisis de la metodología en cascada. Dicho análisis comprende la presentación del estudio de factibilidad de este proyecto, factibilidad técnica, factibilidad operativa y económica, además de un análisis de riesgos posibles en la realización de este proyecto. Asimismo, se presenta la arquitectura que tendrá el protocolo criptográfico, la descripción de todos los procesos involucrados en el funcionamiento de este protocolo junto con los actores correspondientes a cada proceso. Como parte final de este capítulo, se encontrarán los requerimientos funcionales que este protocolo debe cubrir y de igual forma los requerimientos funcionales que estarán presentes dentro del proyecto. 
+El capítulo de análisis dentro de este documento, contiene todo el proceso que corresponde a la etapa de análisis de la modelo de desarrollo de software en cascada. Dicho análisis comprende la presentación del estudio de factibilidad de este proyecto, factibilidad técnica, factibilidad operativa y económica, además de un análisis de riesgos posibles en la realización de este proyecto. Asimismo, se presenta la arquitectura que tendrá el protocolo criptográfico, la descripción de todos los procesos involucrados en el funcionamiento de este protocolo junto con los actores correspondientes a cada proceso. Como parte final de este capítulo, se encontrarán los requerimientos funcionales que este protocolo debe cubrir y de igual forma los requerimientos funcionales que estarán presentes dentro del proyecto. 
 
 
 \section{Estudio de Factibilidad}
@@ -97,15 +97,15 @@ S.O. Windows 10 Pro & 1\\ \hline
 
 
 \subsection{Factibilidad operativa}
-El uso e implantación de este protocolo criptográfico, tiene como principal objetivo el eliminar las duplicaciones de archivos que se almacenan en la nube y de igual manera el evitar los ataques de adversarios por fuerza bruta a la información de los usuarios en la nube, por lo cual resulta factible la operación del proyecto, ya que se esta proponiendo una solución de bajo costo con grandes eneficios.\\
-Hoy en día va en aumento el número de usuarios de la nube, ya sean empresas, organizaciones, personas, etc. todos estos usuarios buscan su información rapido y de fácil acceso en cualquier lugar con una conexión a internet, y esto hace que también caumente la cantidad de información almacenada que en ocasiones está replicada en uno o mas usuarios.
-Este protocolo pretende atender al problema del crecimiento en la infraestructura de la nube ofreciendo una solución para contrarestarlo y de esa manera más usuarios podrán tener acceso a la nube sin necesidad de aumentar a la infraestructura de esta.
+El uso e implantación de este protocolo criptográfico, tiene como principal objetivo el eliminar la duplicación de archivos que se almacenan en la nube y de igual manera el evitar los ataques de adversarios por fuerza bruta a la información de los usuarios en la nube, por lo cual resulta factible la operación del proyecto, ya que se esta proponiendo una solución de bajo costo con grandes beneficios.\\
+Hoy en día va en aumento el número de usuarios de la nube, ya sean empresas, organizaciones, personas, etc. todos estos usuarios buscan su información de manera rápida y de fácil acceso en cualquier lugar con una conexión a internet, y esto hace que también aumente la cantidad de información almacenada que en ocasiones está replicada en uno o más usuarios.
+Este protocolo pretende atender al problema del crecimiento en la infraestructura de la nube ofreciendo una solución para contrarestarlo y de esa manera más usuarios podrán tener acceso a la nube sin necesidad de aumentar la infraestructura de ésta.
 
 \subsection{Factibilidad económica}
-El estudio de factibilidad económica nos permite analizar los costo - beneficios monetarios que se obtendrán con el desarrollo del proyecto, ya que dicho protocolo en un largo plazo podría comenzar en producción industrial para su comercialización y districución en el mercado de las tecnologías de la información, ya que proveerá de servicios en el cómputo nube que hoy en día las empresas están optando por invertir en el y optimizar sus recursos y procesos del negocio. \\
+El estudio de factibilidad económica nos permite analizar los costo - beneficios monetarios que se obtendrán con el desarrollo del proyecto, ya que dicho protocolo en un largo plazo podría comenzar en producción industrial para su comercialización y distribución en el mercado de las tecnologías de la información, ya que proveerá de servicios en el cómputo nube que hoy en día las empresas están optando por invertir en el y optimizar sus recursos y procesos del negocio. \\
 
-En cuanto al análisis de el gasto económico que se requiere para la implementación y la realización de pruebas del protocolo, existe un beneficio ya que todos los componentes para el desarrollo del sistema son libres, es decir que no se realizará la adquisición de licencias de desarrollo ni programas para la implementación. 
-\\ El servidor que nos proveerá del almacenamiento en la nube de nombre \textbf{ownCloud.org} es de libre acceso y no existe restricción alguna para la utilización de este. Nos permite una libre manipulación y configuración de tal modo que podamos cumplir nuestros objetivos.
+En cuanto al análisis del gasto económico que se requiere para la implementación y la realización de pruebas del protocolo, existe un beneficio ya que todos los componentes para el desarrollo del sistema son libres, es decir que no se realizará la adquisición de licencias de desarrollo ni programas para la implementación. 
+\\ El servidor que nos proveerá del almacenamiento en la nube de nombre \textbf{ownCloud.org} es de libre acceso y no existe restricción alguna para la utilización de éste. Nos permite una libre manipulación y configuración de tal modo que podamos cumplir nuestros objetivos.
 
 %%==================================================================================================================================
 \section{Modelo del Proceso de Desarrollo del Software}
@@ -147,7 +147,7 @@ Dichas fases son las siguientes:
 %%==============================================================================================================================
 \section{Análisis de riesgos} 
 
-El análisis de riesgos consiste en identificar los riesgos que este sistema puede tener en su implementación y desarrollo. Este análisis realizado a este trabajo terminal, se llevó a cabo bajo la metodología de análisis de riesgos presentada por Ian Sommerville en el libro Ingeniería del software ~\cite{sommerville}, dicho autor presenta los posibles riesgos identificados en un sistema y 3 indicadores (Prioridad, Probabilidad e Impacto) fundamentales para llevar a cabo la gestión de riesgos y así tener presente cuales son los riesgos más destacados en el proyecto para dimensionar las consecuencias que estos podrían traer consigo si llegaran a ocurrir. Para elaborar este análisis de riesgos, se evaluaron los impactos que estos riesgos pueden traer, mediante 5 escalas de impacto de un riesgo, dichas escalas son: 
+El análisis de riesgos consiste en identificar los riesgos que este sistema puede tener en su implementación y desarrollo. Este análisis realizado a este trabajo terminal, se llevó a cabo bajo la metodología de análisis de riesgos presentada por Ian Sommerville en el libro Ingeniería del software ~\cite{sommerville}, dicho autor presenta los posibles riesgos identificados en un sistema y 3 indicadores (Prioridad, Probabilidad e Impacto) fundamentales para llevar a cabo la gestión de riesgos y así tener presente cuales son los riesgos más destacados en el proyecto para dimensionar las consecuencias que estos podrían traer consigo si llegaran a ocurrir. Para elaborar este análisis de riesgos, se evaluaron los impactos que pueden traer, mediante 5 escalas de impacto de un riesgo, dichas escalas son: 
 
 \subsection{Escalas de impacto de un riesgo}
 \begin{longtable}{| p{2.5cm} | p{2.5cm} | p{2.5cm} | p{2.3cm} | p{2.5cm} | p{2.5cm} |}
@@ -214,7 +214,7 @@ R5 & Incumplimiento de acuerdos & ALTA & ALTA & MODERADO & Retraso en actividade
 R6 & Problemas de planeación & MEDIA & ALTA & ALTO & Falta de comunicación por parte del equipo \\ \hline
 R7 & Falta de recursos & ALTA & MEDIA & MUY ALTO & No se cuenta con el poder adquisitivo de recursos e insumos \\ \hline
 R8 & Falta de conocimientos & MEDIA & MEDIA & MUY ALTO & El equipo no se encuentra capacitado para el desarrollo del sistema. \\ \hline
-R9 & Sobre estimación de insumos & MEDIA & MEDIA & MODERADO & Los insumos para la implementación del sistema no son los adeacuados para el desarrollo. 
+R9 & Sobre estimación de insumos & MEDIA & MEDIA & MODERADO & Los insumos para la implementación del sistema no son los adecuados para el desarrollo. 
 
 \\ \hline
 \caption{Análisis de riesgos del proyecto}
@@ -222,9 +222,9 @@ R9 & Sobre estimación de insumos & MEDIA & MEDIA & MODERADO & Los insumos para 
 \end{longtable}
 
 
-Dichos riesgos fueron considerados durante la realización de este proyecto, ya que se tomaron en cuanta todos los factores que se ven involucrados en el ambiente que se encuentra este trabajo terminal. Principalmente se tienen muy en cuenta el factor humano, es decir, los errores, mmodificaciones, alteraciones que el equipo de trabajo de este trabajo terminal pudiera cometer o que se encuentre en una situación que pueda comprometer el avance en tiempo y forma de este proyecto.\\ 
+Dichos riesgos fueron considerados durante la realización de este proyecto, ya que se tomaron en cuenta todos los factores que se ven involucrados en el ambiente que se encuentra este trabajo terminal. Principalmente se tienen muy en cuenta el factor humano, es decir, los errores, modificaciones, alteraciones que el equipo de trabajo de este trabajo terminal pudiera cometer o que se encuentre en una situación que pueda comprometer el avance en tiempo y forma de este proyecto.\\ 
 
-Así mismo, el riesg no puede ser mitigado en su totalidad y mucho menos evitar una afectación al desarrollo del trabajo terminal, pero con un plan de acción detallado para cada riesgo identificado se puede disminuir en gran medida las consecuencias que estos reisgos podrían generar, es por ello que se propone el siguiente plan de acción para cada riesgo: 
+Asimismo, el riesgo no puede ser mitigado en su totalidad y mucho menos evitar una afectación al desarrollo del trabajo terminal, pero con un plan de acción detallado para cada riesgo identificado se puede disminuir en gran medida las consecuencias que estos riesgos podrían generar, es por ello que se propone el siguiente plan de acción para cada riesgo: 
 
 
 \begin{longtable}{| p{1cm} | p{5cm} | p{9.5cm} |}
@@ -250,15 +250,15 @@ Así mismo, el riesg no puede ser mitigado en su totalidad y mucho menos evitar 
 \endlastfoot
 
 % aquí añadimos el cuerpo de la tabla.
-R1 & Modificar requerimientos & Se cuenta como un requerimiento no funcional la mantenibilidad, en la cuál dice que cada nuevo requerimiento tendrá que ser analizado para cuantificar las implicaciones de este y su efectividad \\ \hline
-R2 & Cambios en tecnología & En cuanto exista una nueva tecnología, se analizarán las ventajas y desventajas de ésta para posteriormente tomar una desición para actualizar o conservar dicha tecnología\\ \hline
+R1 & Modificar requerimientos & Se cuenta como un requerimiento no funcional, la mantenibilidad, en la cuál dice que cada nuevo requerimiento tendrá que ser analizado para cuantificar las implicaciones de éste y su efectividad \\ \hline
+R2 & Cambios en tecnología & En cuanto exista una nueva tecnología, se analizarán las ventajas y desventajas de ésta para posteriormente tomar una decisión para actualizar o conservar dicha tecnología\\ \hline
 R3 & Falta de usuarios y peticiones & El sistema tendrá como máximo 118ms de latencia, en caso de persistir el problema se volverá a realizar la petición y en el peor escenario se notificará del error al administrador del sistema para su correción \\ \hline
 R4 & Equipo de cómputo & Cuando exista una falla en el equipo de cómputo que opera el sistema, se procederá a poner fuera de línea el sistema para poder cambiar o reparar el equipo que se encuentra dañado \\ \hline
-R5 & Incumplimiento de acuerdos & En caso de retrazo en actividades programadas, se procederá a una reunión con el equipo de trabajo para dar prioridades a las actividades y avanzar en un mínimo periódo de tiempo \\ \hline
-R6 & Problemas de planeación & En caso de presentarse la falta o erronea comunicación en el equipo, se procederá a una reunión con todo el equipo para revisar los incidentes y re plantear las actividades \\ \hline
+R5 & Incumplimiento de acuerdos & En caso de retraso en actividades programadas, se procederá a una reunión con el equipo de trabajo para dar prioridades a las actividades y avanzar en un mínimo período de tiempo \\ \hline
+R6 & Problemas de planeación & En caso de presentarse la falta o errónea comunicación en el equipo, se procederá a una reunión con todo el equipo para revisar los incidentes y replantear las actividades \\ \hline
 R7 & Falta de recursos & A falta de recursos, se buscará la adquisición de estos a costos más bajos a los actuales o se tendrá que adquirir una deuda con un acreedor ajeno al proyecto \\ \hline
 R8 & Falta de conocimientos & Cuando se presente este problema, el equipo debe inmediatamente reunirse para poder planificar cursos de capacitación, talleres, conferencias, etc. \\ \hline
-R9 & Sobre estimación de insumos & Los insumos utilizados en el proyecto están especificados desde el inicio del proyecto, en caso de que esta especificación falle se tendrá que realizar una nueva valoración de los insumos que sean necesarios.
+R9 & Sobreestimación de insumos & Los insumos utilizados en el proyecto están especificados desde el inicio del proyecto, en caso de que esta especificación falle se tendrá que realizar una nueva valoración de los insumos que sean necesarios.
 
 \\ \hline
 \caption{Plan de acción ante riesgos en el proyecto}
@@ -277,7 +277,7 @@ R9 & Sobre estimación de insumos & Los insumos utilizados en el proyecto están
 
 \end{figure}
 
-En este apartado se presenta la arquitectura general del protocolo criptográfico, dicha arquitectura tiene como base de desarrollo al protocolo Dupless que se menciona en este documento. Dupless provee a esta arquitectura la implementación de un servidor de llaves $KS$ para evitar los duplicados en la Nube garantizando la confidencialidad e integridad de toda la información almacenada por los usuarios del protocolo. Esta arquitectura se compone de 3 importantes entidades que son: 
+En este apartado se presenta la arquitectura general del protocolo criptográfico, dicha arquitectura tiene como base de desarrollo al protocolo DupLESS que se menciona en este documento. DupLESS provee a esta arquitectura la implementación de un servidor de llaves $KS$ para evitar los duplicados en la Nube garantizando la confidencialidad e integridad de toda la información almacenada por los usuarios del protocolo. Esta arquitectura se compone de 3 importantes entidades que son: 
 \begin{itemize}
 	\item \textbf{Servidor de Llaves $KS$: } Dicha entidad será la responsable de proveer firmas para generar claves específicas para cifrar cada archivo diferente $M$ a almacenar por un usuario en la Nube.
 	\item \textbf{Cliente: } Esta entidad corresponde al lado del usuario, el cuál almacenará, descargará y consultará archivos en la Nube, además de realizar procedimientos necesarios para la gestión de un archivo $M$. 
@@ -311,10 +311,10 @@ En este apartado se presenta la arquitectura general del protocolo criptográfic
 
 \end{figure}
 
-El cliente envía al servidor $KS$ el archivo $x$ que se requiere firmar para continuar con el proceso de almacenameitno de archivo.\\ \\
+El cliente envía al servidor $KS$ el archivo $x$ que se requiere firmar para continuar con el proceso de almacenamiento de archivo.\\ \\
 El servidor recibe a \textit{x} que corresponde a la función hash del archivo $M$. Para poder realizar la firma, es necesario que el servidor realice una operación con su llave privada $d$. Dicha firma es a ciegas ya que el servidor no conoce el contenido del archivo $M$ ni el usuario que esta solicitando dicha firma. \\ \\
 El proceso se puede representar de la siguiente manera: \hspace{2cm} \textit{y ← x$^d$ $\bmod$ N} \\ \\
-Posteriormete, el servidor envía al cliente la firma obtenida $y$
+Posteriormente, el servidor envía al cliente la firma obtenida $y$
 
 
 
@@ -338,7 +338,7 @@ Lo que hace el cliente es obtener el valor de $z$, y se lleva a cabo de la sigui
 
 \end{figure}
 
-Para continuar con el almacenamiento de un archivo $M$, es necesario realizar una verificación de la procedencia de la firma realizada en el servidor $KS$. En este paso se corrobora la firma, es decir, verifica que efectivamente sea el servidor de llaves $KS$ la entidad que realizo la firma a ciegas al archivo $M$ que el cliente estaba solicitando. También en este paso se asegura que el archivo firmado por el servidor $KS$ sea el que el cliente envió para su solicitud de almacenamiento. \\ \\
+Para continuar con el almacenamiento de un archivo $M$, es necesario realizar una verificación de la procedencia de la firma realizada en el servidor $KS$. En este paso se corrobora la firma, es decir, verifica que efectivamente sea el servidor de llaves $KS$ la entidad que realizó la firma a ciegas al archivo $M$ que el cliente estaba solicitando. También en este paso se asegura que el archivo firmado por el servidor $KS$ sea el que el cliente envió para su solicitud de almacenamiento. \\ \\
 La verificación se lleva a cabo de la siguiente manera: 
 \begin{itemize}
 \item Se realiza la operación $z^e \bmod N $, para eliminar el factor de ocultamiento realizado por el cliente. Así se comprueba que la misma función hash generada en el cliente es igual a la que estaba bajo el factor de ocultamiento, si estas son iguales entonces se verifica que efectivamente el servidor $KS$ fue el responsable de la firma $y$ obtenida. 
@@ -408,7 +408,7 @@ En este caso de la detección de duplicados, no se encontró ninguna almacenada 
 
 \subsection{Descripción del proceso subir archivo.}
 
-El proceso inicia cuando el cliente desea subir un archivo nuevo, el cliente debe dar clic en la opción de subir archivo y seleccionar el archivo que desee subir, el sistema va a calcular el hash del archivo elegido, después hará unas operaciones aritméticas con el hash para generar una $x$ que se enviara al servidor para que realice una firma a ciegas, y con esta firma que se le regresará al cliente, se va a generar del lado del cliente su llave $k$ que será la llave con la cual cifrará el archivo, y así si otro archivo que se quiera subir es igual a este tendrá la misma $k$ y podrá el sistema detectar que son duplicados, también el sistema va a cifrar la llave $k$ por si se le llega a perder al cliente, para poder almacenarlo en la nube el sistema mandara el hash del archivo cifrado para ver si ya está registrado en la base de datos, si es así solo guarda la llave y actualiza la lista de los usuario que comparten el archivo, de lo contrario solicita la llave cifrada y el archivo cifrado para almacenarlos y actualiza su lista de usuario añadiendo un archivo en ella, y por último se le notificará al cliente que su archivo ha sido almacenado.
+El proceso inicia cuando el cliente desea subir un archivo nuevo, el cliente debe dar clic en la opción de subir archivo y seleccionar el archivo que desee subir, el sistema va a calcular el hash del archivo elegido, después hará unas operaciones aritméticas con el hash para generar una $x$ que se enviará al servidor para que realice una firma a ciegas, y con esta firma que se le regresará al cliente, se va a generar del lado del cliente su llave $z$ que será la llave con la cual cifrará el archivo, y así si otro archivo que se quiera subir es igual a éste tendrá la misma $z$ y podrá el sistema detectar que son duplicados, también el sistema va a cifrar la llave $z$ por si se le llega a perder al cliente, para poder almacenarlo en la nube el sistema mandará el hash del archivo cifrado para ver si ya está registrado en la base de datos, si es así solo guarda la llave y actualiza la lista de los usuario que comparten el archivo, de lo contrario solicita la llave cifrada y el archivo cifrado para almacenarlos y actualiza su lista de usuario añadiendo un archivo en ella, y por último se le notificará al cliente que su archivo ha sido almacenado.
 
 
 
@@ -432,7 +432,7 @@ El proceso inicia cuando el cliente desea subir un archivo nuevo, el cliente deb
 \begin{itemize} 
 \item Selecciona archivo a subir.
 \item Genera hash del archivo. 
-\item Calcula la llave k.
+\item Calcula la llave z.
 \item Cifra los archivos a subir.
 \end{itemize} \\ 
 \hline
@@ -455,7 +455,7 @@ El proceso inicia cuando el cliente desea subir un archivo nuevo, el cliente deb
 
 \subsection{Descripción del proceso Descargar archivo.}
 
-El proceso inicia cuando el cliente da clic en la opción de descargar archivo y seleccionar el archivo a descargar, el sistema va a mandar el nombre del archivo a la nube para que busque en su base de datos los archivos correspondientes al usuario y nombre del archivo, se le regresarán al cliente y el sistema en el lado del cliente deberá descifrar el archivo $C2$ que contiene la llave $k$ para poder descifrar el otro archivo $C1$ donde se encuentra el archivo original, el sistema notificara al cliente que su archivo se ha descargado con éxito y este podrá abrirlo. \\
+El proceso inicia cuando el cliente da clic en la opción de descargar archivo y seleccionar el archivo a descargar, el sistema va a mandar el nombre del archivo a la nube para que busque en su base de datos los archivos correspondientes al usuario y nombre del archivo, se le regresarán al cliente y el sistema en el lado del cliente deberá descifrar el archivo $C2$ que contiene la llave $z$ para poder descifrar el otro archivo $C1$ donde se encuentra el archivo original, el sistema notificara al cliente que su archivo se ha descargado con éxito y este podrá abrirlo. \\
 
 
 % - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -597,9 +597,9 @@ RF – SLL2 & El sistema permitirá la firma a ciegas (y) de cualquier archivo q
 \textbf{ID} & \textbf{Descripción} \\
 \hline \hline
 RF – CL1 & El sistema permitirá al usuario gestionar archivos: Subir, Descargar, Eliminar \\ \hline
-RF – CL2 & El sistema permitirá al usuario subir un archivo (F) cifrado al servicio de almacenamiento \\ \hline
-RF – CL3 & El sistema permitirá al usuario descargar un archivo (F) descifrado elegido de su lista de archivos en el servicio de almacenamiento. \\ \hline
-RF – CL4 &El sistema permitirá al usuario eliminar un archivo (F) cuando el usuario elige alguno de su lista de archivos cargados en el servicio de almacenamiento. \\ \hline
+RF – CL2 & El sistema permitirá al usuario subir un archivo (M) cifrado al servicio de almacenamiento \\ \hline
+RF – CL3 & El sistema permitirá al usuario descargar un archivo (M) descifrado elegido de su lista de archivos en el servicio de almacenamiento. \\ \hline
+RF – CL4 &El sistema permitirá al usuario eliminar un archivo (M) cuando el usuario elige alguno de su lista de archivos cargados en el servicio de almacenamiento. \\ \hline
 \end{tabular}
 \caption{Requerimientos funcionales del cliente}
 \label{Cliente }
