Cambios de k por z en imagenes y descripcion de imagen

--- a/TT-2016-B045/archivosTex/diseño.tex
+++ b/TT-2016-B045/archivosTex/diseño.tex
@@ -124,7 +124,7 @@ El capítulo de diseño, está conformado por la especificación de cómo está 
 \begin{figure}[htbp!]
 \centering
 \includegraphics[width=1\textwidth]{images/Registrar_trayectoria_c}
-\caption{Diagrama de secuencias de Iniciar sesión un usuario con campos vacíos.}
+\caption{Diagrama de secuencias de Iniciar sesión un usuario con usuario repetido.}
 \end{figure} 
 \newpage
 
