--- a/TT-2016-B045/bibliografia.bib
+++ b/TT-2016-B045/bibliografia.bib
@@ -9,7 +9,7 @@
 
 @article{Nubecomp,
   author    = {Francisco Ceballos},
-  title     = {Cómputo Nube, detonador de competitividad },
+  title     = {Cloud Computing, detonador de competitividad },
   journal   = {Forbes},
   year      = {2013},
   url       = {https://www.forbes.com.mx/cloud-computing-detonador-de-competitividad/},
@@ -34,7 +34,7 @@
 
  @book{Keelveedhi,
   author    = {Bellare, Keelveedhi, Ristenpart.},
-  title     = {Cifrado por bloqueo de Mensajes y eliminación segura de duplicados},
+  title     = {Message-locked encryption and secure deduplication.},
   publisher = {EUROCRYPT},
   volume    = {7881},
   pages     = {296–312},
@@ -84,7 +84,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
 @misc{abs,
    author = {Cooley J., Taylor C. y  Peacock A.},
-   title = "ABS: El sistema de respaldo asignado.",
+   title = "ABS: the apportioned backup system.",
    year = "2004. Disponible",
     howpublished = { MIT Laboratory for Computer}
  }
@@ -106,7 +106,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
  @book{tahoe,
   author    = {Wilcox-O´Hearn Z., Hopwood D. y Wilcox N.},
-  title     = {Tahoe: La última autoridad},
+  title     = {Tahoe: The least-authority},
   publisher = {In Proceedings of the 4th ACM},
   pages     = {21-26},
   year      = {2008}
@@ -114,7 +114,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
 @book{donceur,
    author = {Donceur J. R. and Adya A. and Bolosky W. J. and Simon D. and Theimer M.},
-   title = {Recuperación de espacio de archivos duplicados en un sistema de archivos distribuido sin servidor.},
+   title = {Reclaiming space from duplicate files in a serverless distributed file system.},
     publisher = {ICDCS},
     pages = {617-624},
    year = {2002}
@@ -156,7 +156,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
 @book{paar,
   author    = {Christof Paar and Jan Pelzl},
-  title     = {Entender la Criptografía - {A} Libro de texto para estudiantes y practicantes},
+  title     = {Understanding Cryptography - {A} Textbook for Students and Practitioners},
   publisher = {Springer},
   year      = {2010},
   url       = {http://dx.doi.org/10.1007/978-3-642-04101-3},
@@ -169,7 +169,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
 @book{stinson,
   author    = {Douglas R. Stinson},
-  title     = {Criptografía, Teoría y Práctica},
+  title     = {Cryptography - theory and practice},
   series    = {Discrete mathematics and its applications series},
   publisher = {{CRC} Press},
   year      = {1995},
@@ -189,7 +189,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
 @book{sommerville,
   author    = {Ian Sommerville},
-  title     = {Ingeniería de Software, 6. Auflage},
+  title     = {Software Engineering, 6. Auflage},
   publisher = {Pearson Studium},
   year      = {2001},
   isbn      = {978-3-8273-7001-3},
@@ -238,7 +238,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
 
 @book{modes,
  author = {Stallings, William},
- title = {Criptografía y Seguridad en la red: Principios y Práctica},
+ title = {Cryptography and Network Security: Principles and Practice},
  year = {2002},
  isbn = {0130914290},
  edition = {5a},
@@ -267,7 +267,7 @@ estadisticas-que-todos-los-cios-deberian-conocer-sobre-cloud-computing.}}
   author    = {Mihir Bellare and
                Sriram Keelveedhi and
                Thomas Ristenpart},
-  title     = {DupLESS: Cifrado Asistido por Servidor para Almacenamiento sin Duplicados},
+  title     = {Dupless: Server-aided encryption for deduplicated storage.},
   journal   = {{IACR} Cryptology ePrint Archive},
   volume    = {2013},
   pages     = {429},
