--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -152,8 +152,8 @@
 \appendix
 \chapter{Lista de acrónimos}
 \cfinput{archivosTex/acronimos}
-\chapter{Glosario de términos}
-\cfinput{archivosTex/GlosarioTerminos}
+%\chapter{Glosario de términos}
+%\cfinput{archivosTex/GlosarioTerminos}
 
 
 %\include{archivosTex/requerimientos}
