--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -110,7 +110,7 @@
 	    {\fontsize{14}{20} \textbf{Dra. Sandra D\'\i az Santiago}}   \vspace{3cm}
 	    \end{center}
 
-	       \hfill   \fontsize{14}{20}  \textbf{Mayo 2017} 
+	       \hfill   \fontsize{14}{20}  \textbf{Diciembre 2017} 
 	    
 	}
 \end{titlepage}
@@ -149,7 +149,16 @@
 \cfinput{archivosTex/diseño}
 
 %------------------------------------------------------------------------------------------------------------------------------------
-\appendix
+\chapter{Desarrollo}
+
+\cfinput{archivosTex/desarrollo}
+
+%------------------------------------------------------------------------------------------------------------------------------------
+
+
+
+
+
 \chapter{Lista de acrónimos}
 \cfinput{archivosTex/acronimos}
 %\chapter{Glosario de términos}
